# divide-and-conquer-talk

./: .editorconfig  .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml  setup.cfg
divide_conquer/: boot.py
divide_conquer/configuration/: application.py  database.py  dependency_injection.py
divide_conquer/core/entity/: user.py
divide_conquer/core/use_case/: failure.py
divide_conquer/core/use_case/user/: create_new_user.py
divide_conquer/dataproviders/database/user/: model.py  repository.py
divide_conquer/entrypoints/rest/: helpers.py
divide_conquer/entrypoints/rest/health/: get_health_status.py
divide_conquer/entrypoints/rest/user/: __init__.py  create_new_user.py
docs/: index.html
tests/entrypoints/rest/helpers/: test_json_response.py  test_parse_request_body.py
