[tool.poetry]
name = "divide_conquer"
version = "0.0.1"
description = "Code example for `Divide and Conquer` talk"
authors = ["Pablo Aguilar <pablo.aguilar@fatec.sp.gov.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thepabloaguilar/divide-and-conquer-talk"

[tool.poetry.dependencies]
python = "^3.7"

flask = "^1.1.2"
flask-restful = "^0.3.8"
punq = "^0.4.1"
sqlalchemy = "^1.3.18"
psycopg2-binary = "^2.8.5"
httpx = "^0.13.3"
orjson = "^3.3.1"
flask-cors = "^3.0.8"
returns = "^0.14.0"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

